--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Nagyi bevásárló listája</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="background-image: url('images/bg.jpg')">
 <div id="app"></div>
 </body>
 </html>
