--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,12 @@
     <title>Nagyi bevásárló listája</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("user_hZT668wADQPXJQB0Qs3VM");
+        })();
+    </script>
 </head>
 <body style="background-image: url('images/bg.jpg')">
 <div id="app"></div>
