--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <title>Nagyi bevásárló listája</title>
+  <meta charset="UTF-8">
+  <title>Nagyi bevásárló listája</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function(){
-            emailjs.init("user_hZT668wADQPXJQB0Qs3VM");
-        })();
-    </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("user_hZT668wADQPXJQB0Qs3VM");
+    })();
+  </script>
 </head>
 <body style="background-image: url('images/bg.jpg')">
 <div id="app"></div>
+<script src="/bundle.js"></script>
 </body>
 </html>
