--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8">
   <title>Nagyi bevásárló listája</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css">
+
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script type="text/javascript">
     (function () {
@@ -14,6 +22,7 @@
 </head>
 <body style="background-image: url('images/bg.jpg')">
 <div id="app"></div>
+
 <script src="/bundle.js"></script>
 </body>
 </html>
