--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     })();
   </script>
 </head>
-<body style="background-image: url('images/bg.jpg')">
+<body style="background-image: url('images/bg5.jpg')">
 <div id="app"></div>
 
 <script src="/bundle.js"></script>
